--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	
 	<groupId>net.nyvaria</groupId>
 	<artifactId>OpenAnalytics</artifactId>
-	<version>0.1.02</version>
+	<version>0.1.03</version>
 	
 	<name>OpenAnalytics</name>
 	<url>https://github.com/nyvaria/OpenAnalytics</url>
@@ -58,6 +58,10 @@
 			<id>Plugin Metrics</id>
 			<url>http://repo.mcstats.org/content/repositories/public</url>
 		</repository>
+		<repository>
+			<id>repo.pjt.me</id>
+			<url>http://repo.pjt.me/content/groups/public</url>
+		</repository>
 	</repositories>
 	
 	<dependencies>
@@ -68,16 +72,22 @@
 			<scope>provided</scope>						
 		</dependency>
 		<dependency>
+			<groupId>org.mcstats.bukkit</groupId>
+			<artifactId>metrics</artifactId>
+			<version>R7</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.onarandombox.multiversecore</groupId>
 			<artifactId>Multiverse-Core</artifactId>
 			<version>2.4</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.mcstats.bukkit</groupId>
-			<artifactId>metrics</artifactId>
-			<version>R7</version>
-			<scope>compile</scope>
+			<groupId>org.wargamer2010</groupId>
+			<artifactId>SignShop</artifactId>
+			<version>2.8.2</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	
