Converted completely to using NyvariaComponents. Added SignShopListener.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ version: ${pom.version}
 author: captbunzo
 
 main: net.nyvaria.openanalytics.OpenAnalytics
-softdepend: [Multiverse-Core]
+softdepend: [Multiverse-Core, SignShop]
 
 commands:
 
