A little refactoring and some SignShop updates.

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	
 	<groupId>net.nyvaria</groupId>
 	<artifactId>OpenAnalytics</artifactId>
-	<version>1.0.01</version>
+	<version>1.0.02-SNAPSHOT</version>
 	
 	<name>OpenAnalytics</name>
 	<url>https://github.com/nyvaria/OpenAnalytics</url>
