Minor refactoring to bukkit code. Fixing issue with config on bungee version.

--- a/bukkit/src/main/resources/config.yml
+++ b/bukkit/src/main/resources/config.yml
@@ -2,7 +2,9 @@
 # OpenAnalytics Configuration
 #
 
-use-metrics: true
 tracking-id: UA-XXXXXXXX-Y
 host-name: server.com
+use-metrics: true
+use-signshop: true
+in-bungeecord: false
 
