--- a/bungee/pom.xml
+++ b/bungee/pom.xml
@@ -63,10 +63,8 @@
                 <filtering>false</filtering>
                 <directory>src/main/resources</directory>
                 <includes>
-                    <include>README.md</include>
-                    <include>CHANGELOG.md</include>
-                    <include>LICENSE</include>
                     <include>config.yml</include>
+                    <include>player.yml</include>
                 </includes>
             </resource>
             <resource>
